--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-responsive": "^8.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
