--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "linebreak-style": 0,
     "no-underscore-dangle": "off",
     "import/prefer-default-export": "off",
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
   }
 }
