--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
@@ -13,6 +14,8 @@
     "react-responsive": "^8.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -43,6 +46,7 @@
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.0",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
